--- a/index_v2.html
+++ b/index_v2.html
@@ -23,6 +23,15 @@ div.desc {
   text-align: center;
 }
 </style>
+
+<style>
+ #map {
+   width: 100%;
+   height: 400px;
+   background-color: grey;
+ }
+</style>
+
 </head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <body>
@@ -66,6 +75,13 @@ Aleppo is the second largest city in Syria. Famous for it's citadel, the city is
     <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1991_PublicPark.jpg" alt="image not available" width="600" height="400">
   </a>
   <div class="desc">The Public Park - 1991 </div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/2008_Citadel.jpg">
+    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/2008_Citadel.jpg" alt="image not available" width="600" height="400">
+  </a>
+  <div class="desc">The great gate of the citadel - 2008 </div>
 </div>
 
 
