updating text and adding cloudfront url for last photo

--- a/index_v2.html
+++ b/index_v2.html
@@ -41,7 +41,8 @@ A website with photos and information about the city of Aleppo.
 <p>
 
 <h1>Some facts</h1>
-Aleppo is the second largest city in Syria. Famous for it's citadel, the city is one of the oldest continuously inhabited cities in the world; it may have been inhabited since the 6th millennium BC
+Aleppo is the second largest city in Syria. Famous for it's citadel, the city is one of the oldest continuously inhabited cities in the world; it may have been inhabited since the 6th millennium BC.
+From The book The Times Complete History of the World "the citadel was mostly constructed by AZ-Zahir Ghazi, it is one of the greatest fortresses in the north Syria region. The citadel embodied the most recent technologies of its time such as bend entrances and box-machicolations to deter attack"
 </p>
 
 <p>
@@ -78,8 +79,8 @@ Aleppo is the second largest city in Syria. Famous for it's citadel, the city is
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/2008_Citadel.jpg">
-    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/2008_Citadel.jpg" alt="image not available" width="600" height="400">
+  <a target="_blank" href="https://dk33y2oh4bq75.cloudfront.net/photos/2008_Citadel.jpg">
+    <img src="https://dk33y2oh4bq75.cloudfront.net/photos/2008_Citadel.jpg" alt="image not available" width="600" height="400">
   </a>
   <div class="desc">The great gate of the citadel - 2008 </div>
 </div>
