adding meissoon's pdf with cloud front url

--- a/index_v2.html
+++ b/index_v2.html
@@ -37,12 +37,14 @@ div.desc {
 <body>
 
 <h1>The City of Aleppo</h1>
-A website with photos and information about the city of Aleppo. 
+A website with photos and information about the City of Aleppo. 
 <p>
 
 <h1>Some facts</h1>
 Aleppo is the second largest city in Syria. Famous for it's citadel, the city is one of the oldest continuously inhabited cities in the world; it may have been inhabited since the 6th millennium BC.
-From The book The Times Complete History of the World "the citadel was mostly constructed by AZ-Zahir Ghazi, it is one of the greatest fortresses in the north Syria region. The citadel embodied the most recent technologies of its time such as bend entrances and box-machicolations to deter attack"
+From The book The Times Complete History of the World "the citadel was mostly constructed by AZ-Zahir Ghazi, it is one of the greatest fortresses in the north Syria region. The citadel embodied the most recent technologies of its time such as bend entrances and box-machicolations to deter attack"<br>
+<p>A detailed research about the city, written by Meisoon Jumah can be downloaded <a href="https://dk33y2oh4bq75.cloudfront.net/documents/AFutureforAleppo.pdf">by clicking here</a>.</p>
+
 </p>
 
 <p>
