updated index.html and adding new food file

--- a/index_v2.html
+++ b/index_v2.html
@@ -45,9 +45,24 @@ Aleppo is the second largest city in Syria. Famous for it's citadel, the city is
 From The book The Times Complete History of the World "the citadel was mostly constructed by AZ-Zahir Ghazi, it is one of the greatest fortresses in the north Syria region. The citadel embodied the most recent technologies of its time such as bend entrances and box-machicolations to deter attack"<br>
 <p>A detailed research about the city, written by Meisoon Jumah can be downloaded <a href="https://dk33y2oh4bq75.cloudfront.net/documents/AFutureforAleppo.pdf">by clicking here</a>.</p>
 
+The city is home to the following sports clubs: <br>
+<br>
+Al Itihad ,United, It is the club of the Olympic swimmer Bayan Jumah. The club's home colour is red, and has training grounds in the Jamyliah and Shahba areas of Aleppo. <br>
+Al Jalaa ,Evacuation, <br>
+Al Yarmook ,Largest tributary of the Jordan River, <br>
+Al Hurryah ,Liberty, <br>
+
 </p>
 
 <p>
+  <h1>Gastronomy</h1>
+  It is well known in Syria that the food in Aleppo is of high quality.
+  Whether you are looking for a vegetarian Musakah with a Mediterranean flavour, a char grilled spicy kebab, or a the city's speciality 'Kebbah', there is no better place to visit in Syria other than Aleppo. 
+  <ul>
+    <li><a href="https://s3.eu-west-2.amazonaws.com/halab.info/food.html">Gastronomy</a></li>
+  </ul>
+  </p>
+
 
 <p>
 <h1>Photos</h1>
@@ -86,9 +101,8 @@ From The book The Times Complete History of the World "the citadel was mostly co
   </a>
   <div class="desc">The great gate of the citadel - 2008 </div>
 </div>
-
-
 </p>
+
 
 
 </body>
