updating music section

--- a/index_v2.html
+++ b/index_v2.html
@@ -62,6 +62,22 @@ Al Hurryah ,Liberty, <br>
     <li><a href="https://s3.eu-west-2.amazonaws.com/halab.info/food.html">Gastronomy</a></li>
   </ul>
   </p>
+  
+<p>
+  <h1>Music</h1>
+  Just like food, music in Syria has a great deal of varaity. From Aleppo the tenor singer Sabah Fakhri sings tunes with complex lyrics from the "Al-Andalus" region poetry. Sabah Fakhri's music could be categorize under the secular music genre. The artist is very well known, and his music is admired by a lot of people. </br> In one of his tunes, Sabah sings about a brown fish, fished in the afternoon. The fish was fished by a skilled fisherman, and sold by an outstanding salesman. And in another tune asking for the wine of love, which is the cure of his heart's pains. The tune continues to mention that life without love, is like a small river without water. As a fun fact, 'a small river' in Arabic is said and written the same way  as 'spread sheet'. Also, 'Sabah' means morning. </br>
+  <br/>
+  
+<audio controls>
+
+  <source src="https://s3.eu-west-2.amazonaws.com/halab.info/music/costal_dabkeh.mp3" type="audio/mpeg"> 
+
+</audio>
+</br>
+ sample "Dabkeh" music famous in the Syrian cost.
+  </p>
+
+
 
 
 <p>
