added css style sheet

--- a/index_v2.html
+++ b/index_v2.html
@@ -35,6 +35,8 @@ div.desc {
 </head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <body>
+<link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle.css">
+<link rel="stylesheet" href="https://use.typekit.net/mdv5bbe.css">
 
 <h1>The City of Aleppo</h1>
 A website with photos and information about the City of Aleppo. 
