adding food.html and folders with photos

--- a/food.html
+++ b/food.html
@@ -40,10 +40,21 @@ div.desc {
 A type of bean, mixed with Tahina, olive oile, garlic, cummin
 <p>
 
-<h1>Method</h1>
+<h1>Ingredients</h1>
 
-1- boil the beans for 
-2- squeeze 4-5 garlics 
+Click on the interactive image to get more details
+<br>
+<img src="https://s3.eu-west-2.amazonaws.com/halab.info/food/foul_ingredients.jpg" width="960" height="720" alt="Planets" usemap="#planetmap">
+
+<map name="planetmap">
+  <area shape="rect" coords="440,403,512,519" alt="Sun" href="https://s3.eu-west-2.amazonaws.com/halab.info/food/vicia_faba.jpg">
+  <area shape="rect" coords="504,163,555,283" alt="Sun" href="https://s3.eu-west-2.amazonaws.com/halab.info/food/sodium_chloride.jpg">
+  <area shape="rect" coords="491,163,573,374" alt="Sun" href="https://s3.eu-west-2.amazonaws.com/halab.info/food/cumin_seeds.jpg">
+  <area shape="rect" coords="520,435,566,477" alt="Sun" href="https://s3.eu-west-2.amazonaws.com/halab.info/food/aleppo_pepper.jpg">
+  <area shape="rect" coords="672,330,750,450" alt="Sun" href="https://s3.eu-west-2.amazonaws.com/halab.info/food/sesame_seeds.jpg">
+  <area shape="rect" coords="800,209,818,442" alt="Sun" href="https://s3.eu-west-2.amazonaws.com/halab.info/food/olive.jpg">
+</map>
+
 
 </body>
 </html>
