small change to test the pipeline in master

--- a/index_v2.html
+++ b/index_v2.html
@@ -72,7 +72,7 @@ Al Hurryah ,Liberty, <br>
  The Syrian Pound, known as the 'Lyra' is the currency of exchange in Syria. 1 Lyra in the early 1990s did not have a strong purchase power. The 'Lyra' coin has the Hawk of Quraish on one of its sides.<br> 
  Buying a small pack of a pyramid shaped container of squash juice 'Bon Jus' would cost SP 5. <br>
  The same price tag would be on a packet of the renowned crisp 'Derby'. A bag of white bread known as the 'tourist like bread' would cost about SP 25. <br>
- However, a trip from the New Aleppo area are to parts of the City Centre would only cost SP 5 in a crowded mini bus, known among the locals as the 'micro' <br>
+ However, a trip from the New Aleppo area are to parts of the City Centre would only cost SP 5 in a crowded mini bus, known among the locals as the 'micro'.<br>
  The notes and coins in the 1990s were a 50 pence conin, 1 Syrian pound coin,a fiver,a tenner, SP 25 note, SP 50 note, SP 100 note, SP 500 note. <br>
  Locally, the 50 pence is called 'Kursh', and the 500 'Tarboosh'. The SP 500 was called 'Tarboosh' due to the image of Nevertity on it. <br>
  In the late 1990s and early 2000s the fiver, and tenner notes were pulled from cerculation and supstituted with coins. A gold like color edged SP 25 coin, a SP 2 coin, a 200 note, and a 1000 note were also introduced<br>
