adding css for marquees moving image and folder for images and some text for the education section

--- a/index_v2.html
+++ b/index_v2.html
@@ -199,7 +199,76 @@ Al Hurryah ,Liberty, <br>
 </div>
 </p>
 
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
 
+<p>
+<h1>Education</h1>
+School education is mandatory and free, the highest degree in school is called the Bacalorya.
+
+<style style="text/css">
+  .marquee-outer {
+   height: 100px;	
+   overflow: hidden;
+   position: relative;
+   color: black;
+  }
+  .marquee-inner {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   margin: 0;
+   line-height: 50px;
+   text-align: center;
+   /* Starting position */
+   -moz-transform:translateX(100%);
+   -webkit-transform:translateX(100%);	
+   transform:translateX(100%);
+   /* Apply animation to this element */	
+   -moz-animation: scroll-left 8s linear infinite;
+   -webkit-animation: scroll-left 8s linear infinite;
+   animation: scroll-left 8s linear infinite;
+  }
+  /* Move it (define the animation) */
+  @-moz-keyframes scroll-left {
+   0%   { -moz-transform: translateX(100%); }
+   100% { -moz-transform: translateX(-100%); }
+  }
+  @-webkit-keyframes scroll-left {
+   0%   { -webkit-transform: translateX(100%); }
+   100% { -webkit-transform: translateX(-100%); }
+  }
+  @keyframes scroll-left {
+   0%   { 
+   -moz-transform: translateX(100%); /* Browser bug fix */
+   -webkit-transform: translateX(100%); /* Browser bug fix */
+   transform: translateX(100%); 		
+   }
+   100% { 
+   -moz-transform: translateX(-100%); /* Browser bug fix */
+   -webkit-transform: translateX(-100%); /* Browser bug fix */
+   transform: translateX(-100%); 
+   }
+  }
+  </style>
+  
+  <div class="marquee-outer">
+<table style="width:100%">
+    <tr>
+<td><div class="marquee-inner"><img src="C:\Users\Mo\Documents\halab\brands\Arabic_Language.jpg" width="349" height="168" alt="arabic"></div></td>
+<td><div class="marquee-inner"><img src="C:\Users\Mo\Documents\halab\brands\University_of_Aleppo_Logo.jpg" width="100" height="98" alt="university"></td>
+  </tr>
+</table>
+  </div>
+  
+  </p>
 
 </body>
 </html>
