--- a/index_v2.html
+++ b/index_v2.html
@@ -262,8 +262,8 @@ School education is mandatory and free, the highest degree in school is called t
   <div class="marquee-outer">
 <table style="width:100%">
     <tr>
-<td><div class="marquee-inner"><img src="C:\Users\Mo\Documents\halab\brands\Arabic_Language.jpg" width="349" height="168" alt="arabic"></div></td>
-<td><div class="marquee-inner"><img src="C:\Users\Mo\Documents\halab\brands\University_of_Aleppo_Logo.jpg" width="100" height="98" alt="university"></td>
+<td><div class="marquee-inner"><img src="https://s3.eu-west-2.amazonaws.com/halab.info/brands/Arabic_Language.jpg" width="349" height="168" alt="arabic"></div></td>
+<td><div class="marquee-inner"><img src="https://s3.eu-west-2.amazonaws.com/halab.info/brands/University_of_Aleppo_Logo.jpg" width="100" height="98" alt="university"></td>
   </tr>
 </table>
   </div>
