fixing broken link

--- a/index_v2.html
+++ b/index_v2.html
@@ -61,7 +61,7 @@ Al Hurryah ,Liberty, <br>
   It is well known in Syria that the food in Aleppo is of high quality.
   Whether you are looking for a vegetarian Musakah with a Mediterranean flavour, a char grilled spicy kebab, or a the city's speciality 'Kebbah', there is no better place to visit in Syria other than Aleppo. 
   <ul>
-    <li><a href="https://s3.eu-west-2.amazonaws.com/halab.info/food.html">fool</a></li>
+    <li><a href="https://s3.eu-west-2.amazonaws.com/halab.info/food.html">Gastronomy</a></li>
   </ul>
   </p>
   
