adding hrep with target blank

--- a/index_v2.html
+++ b/index_v2.html
@@ -62,6 +62,7 @@ Al Hurryah ,Liberty, <br>
   Whether you are looking for a vegetarian Musakah with a Mediterranean flavour, a char grilled spicy kebab, or a the city's speciality 'Kebbah', there is no better place to visit in Syria other than Aleppo. 
   <ul>
     <li><a href="fool.halab.info">Gastronomy</a></li>
+    <a href="http://fool.halab.info" target="_blank">fool</a> 
   </ul>
   </p>
   
