--- a/index_v2.html
+++ b/index_v2.html
@@ -155,6 +155,13 @@ Al Hurryah ,Liberty, <br>
 </audio>
 </br>
  sample "Dabkeh" music famous in the Syrian cost.
+</br>
+ <video width="320" height="240" controls>
+  <source src="https://s3.eu-west-2.amazonaws.com/halab.info/videos/Sabah_Fhakri_Touring_Club_Edited.mp4" type="video/mp4">
+</video>
+</br>
+Sabah Fakhri in a concert in Aleppo's Touring Club.
+</br>
   </p>
 
 
