--- a/index_v2.html
+++ b/index_v2.html
@@ -160,7 +160,7 @@ Al Hurryah ,Liberty, <br>
   <source src="https://s3.eu-west-2.amazonaws.com/halab.info/videos/Sabah_Fhakri_Touring_Club_Edited.mp4" type="video/mp4">
 </video>
 </br>
-Sabah Fakhri in a concert in Aleppo's Touring Club.
+Sabah Fakhri in a concert in Aleppo's Touring Club...
 </br>
   </p>
 
