add java script

--- a/index_v2.html
+++ b/index_v2.html
@@ -276,6 +276,11 @@ School education is mandatory and free, the highest degree in school is called t
   </div>
   
   </p>
+<button onclick="document.getElementById('myImage').src='C:\\Users\\Mo\\Documents\\halab\\photos\\pic_bulbon.gif'">Turn on the light</button>
+
+<img id="myImage" src="C:\Users\Mo\Documents\halab\photos\pic_bulboff.gif" style="width:100px">
+  
+<button onclick="document.getElementById('myImage').src='C:\\Users\\Mo\\Documents\\halab\\photos\\pic_bulboff.gif'">Turn off the light</button>
 
 </body>
 </html>
