--- a/index_v2.html
+++ b/index_v2.html
@@ -40,6 +40,13 @@ div.desc {
 
 <h1>The City of Aleppo</h1>
 A website with photos and information about the City of Aleppo. 
+This project aims to virtualy construct what can be constructed from the City of Aleppo. </br>
+Here is an example that builds a facade for a building with a click of button. </br>
+
+<button onclick="document.getElementById('myImage').src='C:\\Users\\Mo\\Documents\\halab\\photos\\2020_NewAleppo_Built.jpg'">Construct</button>
+<img id="myImage" src="C:\Users\Mo\Documents\halab\photos\2020_NewAleppo_Destructed.jpg" style="width:350px">
+<button onclick="document.getElementById('myImage').src='C:\\Users\\Mo\\Documents\\halab\\photos\\2020_NewAleppo_Destructed.jpg'">Demolish</button>
+
 <p>
 
 <h1>Some facts</h1>
@@ -276,12 +283,5 @@ School education is mandatory and free, the highest degree in school is called t
   </div>
   
   </p>
-<button onclick="document.getElementById('myImage').src='C:\\Users\\Mo\\Documents\\halab\\photos\\pic_bulbon.gif'">Turn on the light</button>
-
-<img id="myImage" src="C:\Users\Mo\Documents\halab\photos\pic_bulboff.gif" style="width:100px">
-  
-<button onclick="document.getElementById('myImage').src='C:\\Users\\Mo\\Documents\\halab\\photos\\pic_bulboff.gif'">Turn off the light</button>
-
 </body>
 </html>
-
