change origin from local machine to cloudfront

--- a/index_v2.html
+++ b/index_v2.html
@@ -43,9 +43,9 @@ A website with photos and information about the City of Aleppo.
 This project aims to virtualy construct what can be constructed from the City of Aleppo. </br>
 Here is an example that builds a facade for a building with a click of button. </br>
 
-<button onclick="document.getElementById('myImage').src='C:\\Users\\Mo\\Documents\\halab\\photos\\2020_NewAleppo_Built.jpg'">Construct</button>
-<img id="myImage" src="C:\Users\Mo\Documents\halab\photos\2020_NewAleppo_Destructed.jpg" style="width:350px">
-<button onclick="document.getElementById('myImage').src='C:\\Users\\Mo\\Documents\\halab\\photos\\2020_NewAleppo_Destructed.jpg'">Demolish</button>
+<button onclick="document.getElementById('myImage').src='https:\/\/dk33y2oh4bq75.cloudfront.net\/photos\/2020_NewAleppo_Built.jpg'">Construct</button>
+<img id="myImage" src="https://dk33y2oh4bq75.cloudfront.net/photos/photos\2020_NewAleppo_Destructed.jpg" style="width:350px">
+<button onclick="document.getElementById('myImage').src='https:\/\/dk33y2oh4bq75.cloudfront.net\/photos\/2020_NewAleppo_Destructed.jpg'">Demolish</button>
 
 <p>
 
