Adding alexa skill link and fixing a few typos and grammer mistakes

--- a/index_v2.html
+++ b/index_v2.html
@@ -41,7 +41,7 @@ div.desc {
 <h1>The City of Aleppo</h1>
 A website with photos and information about the City of Aleppo. 
 This project aims to virtualy construct what can be constructed from the City of Aleppo. </br>
-Here is an example that builds a facade for a building with a click of button. </br>
+Here is an example that builds a facade of a building with a click of button. </br>
 
 <button onclick="document.getElementById('myImage').src='https:\/\/dk33y2oh4bq75.cloudfront.net\/photos\/2020_NewAleppo_Built.jpg'">Construct</button>
 <img id="myImage" src="https://dk33y2oh4bq75.cloudfront.net/photos/photos\2020_NewAleppo_Destructed.jpg" style="width:350px">
@@ -60,7 +60,9 @@ Al Itihad ,United, It is the club of the Olympic swimmer Bayan Jumah. The club's
 Al Jalaa ,Evacuation, <br>
 Al Yarmook ,Largest tributary of the Jordan River, <br>
 Al Hurryah ,Liberty, <br>
-
+<br>
+Listen to more facts using this free to enable <a href="https://www.amazon.co.uk/Mo-Jumah-Aleppo-Facts/dp/B08CSGC79Z/ref=sr_1_1?dchild=1&keywords=aleppo&qid=1599955193&s=digital-skills&sr=1-1Alexa Skill" target="_blank">Alexa Skill</a>
+</p>
 </p>
 
 <p>
@@ -348,7 +350,7 @@ achive less and therefore have to go to a technical school.
     </script>
     </head>
     <body>
-    <h1>Do you want volunteer to work jointly on building this website about Aleppo ?</h1>
+    <h1>Do you want to volunteer and work jointly on building this website about Aleppo ?</h1>
         <form id="contact-form" method="post">
             <h4>Name:</h4>
             <input type="text" style="height:35px;" id="name-input" placeholder="Enter name here…" class="form-control" style="width:100%;" /><br/>
