change font, fix spelling mistake, add bullet points

--- a/index_v2.html
+++ b/index_v2.html
@@ -36,7 +36,8 @@ div.desc {
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <body>
 <link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle.css">
-<link rel="stylesheet" href="https://use.typekit.net/mdv5bbe.css">
+<!-- <link rel="stylesheet" href="https://use.typekit.net/mdv5bbe.css"> -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ubuntu">
 
 <h1>The City of Aleppo</h1>
 A website with photos and information about the City of Aleppo. 
@@ -56,10 +57,12 @@ From The book The Times Complete History of the World "the citadel was mostly co
 
 The city is home to the following sports clubs: <br>
 <br>
-Al Itihad ,United, It is the club of the Olympic swimmer Bayan Jumah. The club's home colour is red, and has training grounds in the Jamyliah and Shahba areas of Aleppo. <br>
-Al Jalaa ,Evacuation, <br>
-Al Yarmook ,Largest tributary of the Jordan River, <br>
-Al Hurryah ,Liberty, <br>
+<ul>
+<li>Al Itihad ,United, It is the club of the Olympic swimmer Bayan Jumah. The club's home colour is red, and has training grounds in the Jamyliah and Shahba areas of Aleppo. </li><br>
+<li>Al Jalaa ,Evacuation, </li><br>
+<li>Al Yarmook ,Largest tributary of the Jordan River,</li><br>
+<li>Al Hurryah ,Liberty, </li><br>
+</ul>
 <br>
 Listen to more facts using this free to enable <a href="https://www.amazon.co.uk/Mo-Jumah-Aleppo-Facts/dp/B08CSGC79Z/ref=sr_1_1?dchild=1&keywords=aleppo&qid=1599955193&s=digital-skills&sr=1-1Alexa Skill" target="_blank">Alexa Skill</a>
 </p>
@@ -163,7 +166,7 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
 
 </audio>
 </br>
- sample "Dabkeh" music famous in the Syrian cost.
+ sample "Dabkeh" music famous in the Syrian coast.
 </br>
  <video width="320" height="240" controls>
   <source src="https://dk33y2oh4bq75.cloudfront.net/videos/Sabah_Fhakri_Touring_Club_Edited.mp4" type="video/mp4">
@@ -201,6 +204,13 @@ Sabah Fakhri in a concert in Aleppo's Touring Club, in the early hours of the mo
 </div>
 
 <div class="gallery">
+  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1977_Couple.jpg">
+    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1977_Couple.jpg" alt="image not available" width="600" height="400">
+  </a>
+  <div class="desc">A young couple - 1977 </div>
+</div>
+
+<div class="gallery">
   <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1991_PublicPark.jpg">
     <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1991_PublicPark.jpg" alt="image not available" width="600" height="400">
   </a>
@@ -224,13 +234,14 @@ Sabah Fakhri in a concert in Aleppo's Touring Club, in the early hours of the mo
 <br/>
 <br/>
 <br/>
+<br/>
 
 <p>
 <h1>Education</h1>
 School education is mandatory and free, the highest degree in school is called the Bacalorya. Which is known to be very difficult and complicated.
 Top students go to medicine school. The education mile stone before is the 9th grade, called Prouver. 
 The society conciders students who get a high grade in the 9th grade that enables them to continue science related theoretical studies, 'better' than those who 
-achive less and therefore have to go to a technical school.
+achive less and therefore have to go to a technical or a non-science college.
 
 <style style="text/css">
   .marquee-outer {
