fixing font and adding byan

--- a/index_v2.html
+++ b/index_v2.html
@@ -37,7 +37,8 @@ div.desc {
 <body>
 <link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle.css">
 <!-- <link rel="stylesheet" href="https://use.typekit.net/mdv5bbe.css"> -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ubuntu">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
 <h1>The City of Aleppo</h1>
 A website with photos and information about the City of Aleppo. 
@@ -59,6 +60,15 @@ The city is home to the following sports clubs: <br>
 <br>
 <ul>
 <li>Al Itihad ,United, It is the club of the Olympic swimmer Bayan Jumah. The club's home colour is red, and has training grounds in the Jamyliah and Shahba areas of Aleppo. </li><br>
+<table>
+
+  <tr>
+    <td><img = src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/2012_LondonOlympics_thumb.jpg" alt="image not available"></td>
+    <td><img = src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/Al_Ittihad_Aleppo.jpg" alt="image not available"></td>
+  </tr>
+  
+</table>
+<br>
 <li>Al Jalaa ,Evacuation, </li><br>
 <li>Al Yarmook ,Largest tributary of the Jordan River,</li><br>
 <li>Al Hurryah ,Liberty, </li><br>
@@ -73,7 +83,8 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
   It is well known in Syria that the food in Aleppo is of high quality.
   Whether you are looking for a vegetarian Musakah with a Mediterranean flavour, a char grilled spicy kebab, or a the city's speciality 'Kebbah', there is no better place to visit in Syria other than Aleppo. 
   <ul>
-    <a href="https://fool.halab.info" target="_blank">fool</a> 
+  <li><a href="https://fool.halab.info" target="_blank">fool</a></li>
+  <li>aleppo cake (coming soon)</li>
   </ul>
   </p>
   
