test to trigger the jenkins pipeline

--- a/index_v2.html
+++ b/index_v2.html
@@ -42,7 +42,7 @@ div.desc {
 
 <h1>The City of Aleppo</h1>
 A website with photos and information about the City of Aleppo. </br>
-To access the Private Collection that contains objects dating back to 1960, please fill the form below requesting access to collectionspace. </br>
+To access the Private Collection that contains objects dating back to 1960, fill the form below requesting access to collectionspace. </br>
 This project aims to virtualy construct what can be constructed from the City of Aleppo. </br>
 Here is an example that builds a facade of a building with a click of button. </br>
 
