--- a/index_v2.html
+++ b/index_v2.html
@@ -57,24 +57,29 @@ Aleppo is the second largest city in Syria. Famous for it's citadel, the city is
 From The book The Times Complete History of the World "the citadel was mostly constructed by AZ-Zahir Ghazi, it is one of the greatest fortresses in the north Syria region. The citadel embodied the most recent technologies of its time such as bend entrances and box-machicolations to deter attack"<br>
 <p>A detailed research about the city, written by Meisoon Jumah can be downloaded <a href="https://dk33y2oh4bq75.cloudfront.net/documents/AFutureforAleppo.pdf">by clicking here</a>.</p>
 
-The city is home to the following sports clubs: <br>
+<h1>Fun and Games</h1>
+Fill the form below if you want to volunteer and build parts of the City playing Minecraft, or if you simply want to contribute to the content of this website: <br>
 <br>
-<ul>
-<li>Al Itihad ,United, It is the club of the Olympic swimmer Bayan Jumah. The club's home colour is red, and has training grounds in the Jamyliah and Shahba areas of Aleppo. </li><br>
 <table>
-
   <tr>
-    <td><img = src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/2012_LondonOlympics_thumb.jpg" alt="image not available"></td>
-    <td><img = src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/Al_Ittihad_Aleppo.jpg" alt="image not available"></td>
+    <td><img = src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/2021_Minecraft_City.png" alt="image not available"></td>
   </tr>
-
 </table>
 <br>
-<li>Al Jalaa ,Evacuation, </li><br>
-<li>Al Yarmook ,Largest tributary of the Jordan River,</li><br>
-<li>Al Hurryah ,Liberty, </li><br>
+
+Between the years 2000-2008 some examples of male entertainment were:</li><br>
+<ul>
+  <li>Tarneeb (Cards Game)</li>
+  <li>Trex (Cards Game)</li>
+  <li>Counter-Strike (Video game)
+  <li>Unreal Tournament (Video game)</li>
+  <li>Red Alert (Video game)</li>
+  <li>Cabarets </li>
+  <li>Show-off driving</li>
+  <li>Chess</li>
+  <li>Backgammon</li>
 </ul>
-<br>
+
 Listen to more facts using this free to enable <a href="https://www.amazon.co.uk/Mo-Jumah-Aleppo-Facts/dp/B08CSGC79Z/ref=sr_1_1?dchild=1&keywords=aleppo&qid=1599955193&s=digital-skills&sr=1-1Alexa Skill" target="_blank">Alexa Skill</a>
 </p>
 </p>
