--- a/index_v2.html
+++ b/index_v2.html
@@ -42,8 +42,10 @@ div.desc {
 
 <h1>The City of Aleppo</h1>
 A website with photos and information about the City of Aleppo. </br>
-To access the Private Collection that contains objects dating back to 1960, fill the form below requesting access to <a href="http://collection.halab.info/cspace/core/" target="_blank">collectionspace</a> </br>
-This project aims to virtualy construct what can be constructed from the City of Aleppo. </br>
+
+For new photos and stories, including interesting tales about coins dating back to 1960, photos taken by occidental tourists in Aleppo, and narratives; a new WordPress website is curently in development. The new website can be accessed from <a href="https://exqmple.info" target="_blank">here</a>. </br>
+
+This website project aims to virtualy construct what can be constructed from the City of Aleppo. </br>
 Here is an example that builds a facade of a building with a click of button. </br>
 
 <button onclick="document.getElementById('myImage').src='https:\/\/dk33y2oh4bq75.cloudfront.net\/photos\/2020_NewAleppo_Built.jpg'">Construct</button>
@@ -78,6 +80,7 @@ Between the years 2000-2008 some examples of male entertainment were:</li><br>
   <li>Show-off driving</li>
   <li>Chess</li>
   <li>Backgammon</li>
+  <li>Pool</li>
 </ul>
 
 Listen to more facts using this free to enable <a href="https://www.amazon.co.uk/Mo-Jumah-Aleppo-Facts/dp/B08CSGC79Z/ref=sr_1_1?dchild=1&keywords=aleppo&qid=1599955193&s=digital-skills&sr=1-1Alexa Skill" target="_blank">Alexa Skill</a>
@@ -90,7 +93,7 @@ Listen to more facts using this free to enable <a href="https://www.amazon.co.uk
   Whether you are looking for a vegetarian Musakah with a Mediterranean flavour, a char grilled spicy kebab, or a the city's speciality 'Kebbah', there is no better place to visit in Syria other than Aleppo.
   <ul>
   <li><a href="https://fool.halab.info" target="_blank">fool</a></li>
-  <li>aleppo cake (coming soon)</li>
+  <li><a href="https://cake.halab.info" target="_blank">cake</a></li>
   </ul>
   </p>
 
