refactoring animation, removing rds to save cost, and adding new photos

--- a/index_v2.html
+++ b/index_v2.html
@@ -43,8 +43,6 @@ div.desc {
 <h1>The City of Aleppo</h1>
 A website with photos and information about the City of Aleppo. </br>
 
-For new photos and stories, including interesting tales about coins dating back to 1960, photos taken by occidental tourists in Aleppo, and narratives; a new WordPress website is curently in development. The new website can be accessed from <a href="https://exqmple.info" target="_blank">here</a>. </br>
-
 This website project aims to virtualy construct what can be constructed from the City of Aleppo. </br>
 Here is an example that builds a facade of a building with a click of button. </br>
 
@@ -196,53 +194,37 @@ Sabah Fakhri in a concert in Aleppo's Touring Club, in the early hours of the mo
 </br>
   </p>
 
-
-
-
 <p>
 <h1>Photos</h1>
+
+<div class="gallery">
+  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1990s_Aleppo_Heinz_Renate_Visit_0022_a.jpg">
+    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1990s_Aleppo_Heinz_Renate_Visit_0022_a.jpg" alt="image not available" width="600" height="400">
+  </a>
+  <div class="desc">Saint Simon Church </div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1990s_Aleppo_Heinz_Renate_Visit_0054_a.jpg">
+    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1990s_Aleppo_Heinz_Renate_Visit_0054_a.jpg" alt="image not available" width="600" height="400">
+  </a>
+  <div class="desc">An Arabic house in Aleppo </div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/Antakya.jpg">
+    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/Antakya.jpg" alt="image not available" width="600" height="400">
+  </a>
+  <div class="desc">Family in the Sanjak of Alexandretta </div>
+</div>
 
 <div class="gallery">
   <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1955_Muslimya.jpg">
     <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1955_Muslimya.jpg" alt="image not available" width="600" height="400">
   </a>
-  <div class="desc">Family in the Muslimya suberb of Aleppo - 1955</div>
+  <div class="desc">Family in a suberb north of Aleppo </div>
 </div>
 
-<div class="gallery">
-  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1957_Walid.jpg">
-    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1957_Walid.jpg" alt="image not available" width="600" height="400">
-  </a>
-  <div class="desc">Young man - 1956 </div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1964_AlSabeel.jpg">
-    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1964_AlSabeel.jpg" alt="image not available" width="600" height="400">
-  </a>
-  <div class="desc">Family in the Al Sabeel park - 1964 </div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1977_Couple.jpg">
-    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1977_Couple.jpg" alt="image not available" width="600" height="400">
-  </a>
-  <div class="desc">A young couple - 1977 </div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1991_PublicPark.jpg">
-    <img src="https://s3.eu-west-2.amazonaws.com/halab.info/photos/1991_PublicPark.jpg" alt="image not available" width="600" height="400">
-  </a>
-  <div class="desc">The Public Park - 1991 </div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="https://dk33y2oh4bq75.cloudfront.net/photos/2008_Citadel.jpg">
-    <img src="https://dk33y2oh4bq75.cloudfront.net/photos/2008_Citadel.jpg" alt="image not available" width="600" height="400">
-  </a>
-  <div class="desc">The great gate of the citadel - 2008 </div>
-</div>
 </p>
 
 <br/>
@@ -312,7 +294,7 @@ achive less and therefore have to go to a technical or a non-science college.
   <div class="marquee-outer">
 <table style="width:100%">
     <tr>
-<td><div class="marquee-inner"><img src="https://s3.eu-west-2.amazonaws.com/halab.info/brands/Arabic_Language.jpg" width="349" height="168" alt="arabic"></div></td>
+
 <td><div class="marquee-inner"><img src="https://s3.eu-west-2.amazonaws.com/halab.info/brands/University_of_Aleppo_Logo.jpg" width="100" height="98" alt="university"></td>
   </tr>
 </table>
