--- a/index_v2.html
+++ b/index_v2.html
@@ -54,6 +54,15 @@ Here is an example that builds a facade of a building with a click of button. </
 
 <p>
 
+  <p>
+    <h1>Donate</h1>
+    <form action="https://www.paypal.com/donate" method="post" target="_top">
+    <input type="hidden" name="hosted_button_id" value="KMVTZ73UYWR3A" />
+    <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+    <img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1" />
+    </form>  
+  </p>
+
 <h1>Some facts</h1>
 Aleppo is the second largest city in Syria. Famous for it's citadel, the city is one of the oldest continuously inhabited cities in the world; it may have been inhabited since the 6th millennium BC.
 From The book The Times Complete History of the World "the citadel was mostly constructed by AZ-Zahir Ghazi, it is one of the greatest fortresses in the north Syria region. The citadel embodied the most recent technologies of its time such as bend entrances and box-machicolations to deter attack"<br>
