adding games feature

--- a/index_v2.html
+++ b/index_v2.html
@@ -66,8 +66,12 @@ Aleppo is the second largest city in Syria. Famous for it's citadel, the city is
 From The book The Times Complete History of the World "the citadel was mostly constructed by AZ-Zahir Ghazi, it is one of the greatest fortresses in the north Syria region. The citadel embodied the most recent technologies of its time such as bend entrances and box-machicolations to deter attack"<br>
 <p>A detailed research about the city, written by Meisoon Jumah can be downloaded <a href="https://dk33y2oh4bq75.cloudfront.net/documents/AFutureforAleppo.pdf">by clicking here</a>.</p>
 
+
+
 <h1>Fun and Games</h1>
-Fill the form below if you want to volunteer and build parts of the City playing Minecraft, or if you simply want to contribute to the content of this website: <br>
+<h2>Play a game using Aleppo-Arabic <A HREF="games/quiz.html">here</A> or <br></body></h2>
+
+fill the form below if you want to volunteer and build parts of the City playing Minecraft, or if you simply want to contribute to the content of this website: <br>
 <br>
 <table>
   <tr>
