--- a/index_v2.html
+++ b/index_v2.html
@@ -1,38 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-div.gallery {
-  margin: 5px;
-  border: 1px solid #ccc;
-  float: left;
-  width: 180px;
-}
 
-div.gallery:hover {
-  border: 1px solid #777;
-}
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#food">Food</a>
+  <a href="#contact">Bank Notes Archives</a>
+  <a href="#about">Photos</a>
+</div>
 
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 15px;
-  text-align: center;
-}
-</style>
-
-<style>
- #map {
-   width: 100%;
-   height: 400px;
-   background-color: grey;
- }
-</style>
-
-</head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <body>
 <link rel="stylesheet" type="text/css" href="https://s3.eu-west-2.amazonaws.com/halab.info/mystyle.css">
